syntax = "proto3";

package bottle.fulfillment.v1;

import "bottle/catalog/v1/product.proto";

message LineItem {
  string id = 1;
  int32 quantity = 2;

  bottle.catalog.v1.Product catalog_product = 3;

  bool rush = 6;
  double rush_price = 7;

  double individual_cost = 4;
  double individual_price = 5;
}
