syntax = "proto3";

package bottle.fulfillment.v1;

import "bottle/account/v1/address.proto";
import "bottle/account/v1/user.proto";
import "bottle/catalog/v1/product.proto";

message Order {
  string id = 1;

  bottle.account.v1.User customer = 2;
  bottle.account.v1.Address shipping = 3;
  bottle.account.v1.Address billing = 4;
  string shipping_method = 5;
  repeated bottle.catalog.v1.Product products = 6;

  enum PaymentMethod {
    STRIPE = 0;
    CHECK = 1;
    WIRE_TRANSFER = 2;
    MONEY_ORDER = 3;
    PURCHASE_ORDER = 4;
    WARRANTY = 5;
    ADVANCED_REPLACEMENT = 6;
  }

  PaymentMethod payment_method = 7;
}
