syntax = "proto3";

package bottle.fulfillment.v1;

message TaxLine {
  string id = 1;
  string name = 2;
  double price = 3;
}
